--- a/ALaFrancaise.html
+++ b/ALaFrancaise.html
@@ -206,10 +206,10 @@
             <h4>ohmyfood</h4>
     
             <ul>
-                <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</li></a>
-                <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</li></a>
-                <li> <a href="#">Mentions légales</li></a>
-                <li> <a href="#">Contact</li></a>
+                <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</a></li>
+                <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</a></li>
+                <li> <a href="#">Mentions légales</a></li>
+                <li> <a href="#">Contact</a></li>
             </ul>
     
         </div>
